[package]
name = "async-mavlink"
version = "0.1.4-alpha.0"
authors = ["wucke13 <wucke13@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "An async adapter for mavlink conections"
readme = "README.md"
repository = "https://github.com/wucke13/async-mavlink"
categories = [ "asynchronous", "network-programming", "science::robotics" ]
keywords = [ "async", "mavlink", "subscribe", "sub" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.release]
pre-release-hook = [ "./pre-release-hook.sh" ]

[dependencies]
arc-swap = "1.2"
blocking = "1.0"
futures = "0.3"
mavlink = "0.8"
thiserror = "1.0"
log = { version = "0.4", optional = true }

[dev-dependencies]
simple_logger = "1"
smol = "1"
log = "*"


[features]
default = [ "logging", "parameter_repo" ]
parameter_repo = []
logging = [ "log" ]


[badges]
github = { repository = "wucke13/async-mavlink" }
is-it-maintained-open-issues = { repository = "wucke13/async-mavlink" }
maintenance = { status = "actively-developed" }
